--- a/basic/basictools/package.json
+++ b/basic/basictools/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "styled-component": "^2.8.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
