--- a/basic/basictools/package.json
+++ b/basic/basictools/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "firebase": "^10.5.2",
+    "lightbox.js-react": "^1.0.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "styled-component": "^2.8.0"
