--- a/basic/basictools/package.json
+++ b/basic/basictools/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "firebase": "^10.5.2",
-    "lightbox.js-react": "^1.0.7",
+    "firebase": "^10.12.2",
+    "firebase-tools": "^13.10.2",
+    "lightbox.js-react": "^1.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
