--- a/basic/basictools/package.json
+++ b/basic/basictools/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.0.2",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.2.1",
     "@coreui/react": "^5.1.0",
     "@coreui/react-chartjs": "^3.0.0",
-    "@coreui/coreui": "^5.0.2",
     "@coreui/utils": "^2.0.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "bootstrap": "^5.1.3",
     "classnames": "^2.5.1",
     "firebase": "^10.12.2",
