--- a/basic/basictools/package.json
+++ b/basic/basictools/package.json
@@ -25,6 +25,7 @@
     "firebase": "^10.12.2",
     "firebase-tools": "^13.10.2",
     "lightbox.js-react": "^1.0.8",
+    "mdb-react-ui-kit": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
