--- a/basic/basictools/package.json
+++ b/basic/basictools/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@tippyjs/react": "^4.2.6",
     "bootstrap": "^5.1.3",
     "classnames": "^2.5.1",
     "firebase": "^10.12.2",
